<resources>
    <string name="app_name">MALOB Hidroponia</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="palavra_emmanuel">Assim como a semente traça a forma e o destino da árvore, os teus próprios desejos é que te configuram a vida. (Emmanuel)</string>
    <string name="email_do_lar">le.maia.lobato@gmail.com</string>
    <string name="nav_semear">Semear</string>
    <string name="nav_germinar">Germinar</string>
    <string name="nav_adolescer">Adolescer</string>
    <string name="nav_engordar">Engordar</string>
    <string name="rel_geral">Hortaliças em Fase Final</string>
    <string name="rel_indiv">Relatório Individual</string>

    <string name="eletrocontudividade">Ec [μs/cm]</string>
    <string name="nossa_missao">Contribuir para que o Lar Espírita Maria Lobato de Freitas
        cumpra a sua missão, auferindo para isso recursos financeiros por meio da
        produção e comércio de hortaliças hidropônicas.</string>
    <string name="nossa_meta">Ser uma referência em Uberlândia na produção de
        hortaliças hidropônicas, como instrumento de geração de recursos finaceiros para ações de assistência e desenvolvimento social.</string>
    <string name="nav_relatorio">Relatórios</string>
    <string name="nav_grafico">Gráfico Individualizado </string>
    <string name="nav_diasEngorda">Dias na Engorda</string>
    <string name="nav_dataEventos">Datas de Eventos</string>
    <string name="nav_open_drawer">Open Navigation Drawer</string>
    <string name="nav_planejamento">Planejamento </string>
    <string name="nav_meta">Nossa Meta </string>
    <string name="nav_missao">Nossa Missão </string>
    <string name="nav_close_drawer">Close Navigation Drawer</string>
    <string name="nav_nutricao">Nutrição</string>

    <string-array name="Hortalica">
        <item>Alface</item>
        <item>Rúcula</item>
        <item>Salsa</item>
        <item>Agrião</item>
        <item>Outra</item>
    </string-array>
    <string-array name="Lote">
        <item>A</item>
        <item>B</item>
        <item>C</item>
        <item>D</item>
        <item>E</item>
        <item>F</item>
        <item>G</item>
        <item>H</item>
        <item>I</item>
    </string-array>
    <string-array name="Capacidade">
        <item>1000</item>
        <item>900</item>
        <item>800</item>
        <item>700</item>
        <item>600</item>
        <item>500</item>
    </string-array>
    <string-array name="EcMedido">
        <item>0.0</item>
        <item>0.1</item>
        <item>0.2</item>
        <item>0.3</item>
        <item>0.4</item>
        <item>0.5</item>
        <item>0.6</item>
        <item>0.7</item>
        <item>0.8</item>
        <item>0.9</item>
        <item>1.0</item>
        <item>1.1</item>
        <item>1.2</item>
        <item>1.3</item>
        <item>1.4</item>
        <item>1.5</item>
        <item>1.6</item>
        <item>1.7</item>
        <item>1.8</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="data_da_germina">DATA DA GERMINAÇÃO:</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="senha">Senha</string>
    <string name="email">Email</string>
    <string name="nav_login">Login</string>
    <string name="bt_login">Entrar</string>

</resources>