<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_semear"
            android:checked="true"
            android:icon="@drawable/icone_semear"
            android:title="@string/nav_semear" />
        <item
            android:id="@+id/nav_germinar"
            android:icon="@drawable/ic_germinar"
            android:title="@string/nav_germinar" />
        <item
            android:id="@+id/nav_adolescer"
            android:icon="@drawable/adolescer"
            android:title="@string/nav_adolescer" />
        <item
            android:id="@+id/nav_engordar"
            android:icon="@drawable/fat3"
            android:title="@string/nav_engordar" />
    </group>
    <item android:title="@string/nav_relatorio">
        <menu>
            <item
                android:id="@+id/nav_dataEventos"
                android:icon="@drawable/relato_geral"
                android:title="@string/nav_dataEventos" />
            <item
                android:id="@+id/nav_grafico"
                android:icon="@drawable/grafico_de_barras"
                android:title="@string/nav_grafico" />
            <item
                android:id="@+id/nav_diasEngorda"
                android:icon="@drawable/calendar"
                android:title="@string/nav_diasEngorda" />
        </menu>
    </item>
    <item android:title="@string/nav_planejamento">
        <menu>
            <item
                android:id="@+id/nav_missao"
                android:icon="?attr/actionModePasteDrawable"
                android:title="@string/nav_missao" />
            <item
                android:id="@+id/nav_meta"
                android:icon="@drawable/meta"
                android:title="@string/nav_meta" />
        </menu>
    </item>

</menu>